# wind

./: Plan-22Apr.md  Plan-23Apr-xv6-Shell-Bring-Up.md  README.md  Testing.md
docs/: esp32-s3-port-plan.md
xv6-riscv/: .gitignore  DEPLOYMENT.md  Makefile  PHASE0_SHELL_BRINGUP.md  test-phase0-shell.py  test-phase8-shell.py
xv6-riscv/esp32s3-idf/: CMakeLists.txt  output.txt  sdkconfig  sdkconfig.old
xv6-riscv/esp32s3-idf/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  wind_tcp_console.c
xv6-riscv/kernel/xtensa/: console_idf.c  context.S  kalloc_wrap.c  linker.ld  main.c  memory_idf.c  memory_map_8mb.md  port.h  proc_kstack_service.c  scheduler_stub.c  start.S  timer.c  trap_syscall_stub.c  uart.c  xtensa.h
xv6-riscv/user/: usys.pl
